// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsList handles empty children gracefully 1`] = `
<View
  style={
    [
      {
        "display": "flex",
      },
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "display": "flex",
        },
        {
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexDirection": "row",
        }
      }
      horizontal={true}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      style={
        {
          "flexGrow": 0,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderBottomWidth": 1,
                "borderColor": "#b7bbc866",
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
              },
              undefined,
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#121314",
                "bottom": 0,
                "height": 2,
                "position": "absolute",
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 0,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`TabsList renders correctly with multiple tabs 1`] = `
<View
  style={
    [
      {
        "display": "flex",
      },
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "display": "flex",
        },
        {
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexDirection": "row",
        }
      }
      horizontal={true}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      style={
        {
          "flexGrow": 0,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderBottomWidth": 1,
                "borderColor": "#b7bbc866",
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minWidth": 0,
                  "paddingBottom": 8,
                  "paddingLeft": 32,
                  "paddingRight": 32,
                  "paddingTop": 8,
                }
              }
              testID="undefined-tab-0"
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#121314",
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Tab 1
              </Text>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minWidth": 0,
                  "paddingBottom": 8,
                  "paddingLeft": 32,
                  "paddingRight": 32,
                  "paddingTop": 8,
                }
              }
              testID="undefined-tab-1"
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#686e7d",
                    },
                  ]
                }
              >
                Tab 2
              </Text>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minWidth": 0,
                  "paddingBottom": 8,
                  "paddingLeft": 32,
                  "paddingRight": 32,
                  "paddingTop": 8,
                }
              }
              testID="undefined-tab-2"
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#686e7d",
                    },
                  ]
                }
              >
                Tab 3
              </Text>
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#121314",
                "bottom": 0,
                "height": 2,
                "position": "absolute",
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 0,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <View
      tabLabel="Tab 1"
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Tab 1
         Content
      </Text>
    </View>
  </View>
</View>
`;
